--- a/client/src/components/dashboard/css/drafts.module.css
+++ b/client/src/components/dashboard/css/drafts.module.css
@@ -116,6 +116,12 @@
 	display: flex;
 }
 
+@media only screen and (max-width: 25em) {
+	.drafts__btn-group {
+		justify-content: space-between;
+	}
+}
+
 .drafts__btn {
 	margin-right: 1rem;
 }
