--- a/client/src/components/dashboard/css/header.module.css
+++ b/client/src/components/dashboard/css/header.module.css
@@ -30,10 +30,25 @@
 	align-items: center;
 	grid-column-gap: 1rem;
 }
+@media only screen and (max-width: 25em) {
+	.header__details {
+		grid-column-gap: 0rem;
+		grid-row-gap: 1rem;
+		grid-template-columns: -webkit-max-content;
+		grid-template-columns: max-content;
+	}
+}
 .header__logo {
 	width: 5rem;
 	padding-right: 1rem;
-	border-right: 1px solid #485163;
+}
+@media only screen and (max-width: 25em) {
+	.header__logo {
+		padding-right: 0rem;
+		padding-bottom: 1rem;
+		border-right: none;
+		border-bottom: 1px solid #485163;
+	}
 }
 .header__profile {
 	justify-self: end;
