--- a/client/src/components/dashboard/css/preview.module.css
+++ b/client/src/components/dashboard/css/preview.module.css
@@ -5,6 +5,12 @@
 	font-size: 1.5rem;
 }
 
+@media only screen and (max-width: 50em) {
+	.preview__main {
+		width: 100%;
+	}
+}
+
 .preview__disclaimer {
 	composes: mb-md from './typography.module.css';
 }
