--- a/client/src/components/dashboard/css/preview.module.css
+++ b/client/src/components/dashboard/css/preview.module.css
@@ -1,5 +1,8 @@
 .preview__main {
-	width: 40%;
+	display: grid;
+	grid-template-columns: 1fr 0.8fr;
+	column-gap: 6rem;
+
 	font-family: 'Raleway', sans-serif;
 	font-weight: 500;
 	font-size: 1.5rem;
@@ -7,7 +10,8 @@
 
 @media only screen and (max-width: 50em) {
 	.preview__main {
-		width: 100%;
+		grid-template-columns: 1fr;
+		row-gap: 7rem;
 	}
 }
 
@@ -44,7 +48,8 @@
 	margin-top: 1rem;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-	grid-gap: 2rem;
+	grid-row-gap: 2rem;
+	grid-column-gap: 5rem;
 }
 
 .preview__recipient {
